--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/AdoptOpenJDKInstaller/help.html
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/AdoptOpenJDKInstaller/help.html
@@ -10,10 +10,10 @@
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
-  
+
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
-  
+
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -23,26 +23,9 @@
   THE SOFTWARE.
   #L%
   -->
-<?jelly escape-by-default='true'?>
-<j:jelly xmlns:j="jelly:core" xmlns:f="/lib/form">
-    <f:entry title="${%Version}" field="id" help="/plugin/adoptopenjdk/version.html">
-        <j:choose>
-            <j:set var="jdks" value="${descriptor.installableJDKs}"/>
-            <j:when test="${empty(jdks)}">
-                <!-- if JDK list is not available, fall back to text box -->
-                <f:textbox />
-            </j:when>
-            <j:otherwise>
-                <select name="_.id">
-                    <j:forEach var="family" items="${jdks}">
-                        <optgroup label="${family.name}">
-                            <j:forEach var="jdk" items="${family.releases}">
-                                <f:option value="${jdk.release_name}" selected="${jdk.matchesId(instance.id)}">${jdk.release_name}</f:option>
-                            </j:forEach>
-                        </optgroup>
-                    </j:forEach>
-                </select>
-            </j:otherwise>
-        </j:choose>
-    </f:entry>
-</j:jelly>
+<div class="warning">
+    This installation method relies on a third-party service and may
+    break at any time without notice. Instead, consider preinstalling a JDK on
+    agents, using images that already include a JDK, or downloading the desired
+    JDK manually and configuring the <q>Extract *.zip/*.tar.gz</q> installer.
+</div>
