--- a/src/main/webapp/version.html
+++ b/src/main/webapp/version.html
@@ -10,10 +10,10 @@
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
-  
+
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
-  
+
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -23,26 +23,12 @@
   THE SOFTWARE.
   #L%
   -->
-<?jelly escape-by-default='true'?>
-<j:jelly xmlns:j="jelly:core" xmlns:f="/lib/form">
-    <f:entry title="${%Version}" field="id" help="/plugin/adoptopenjdk/version.html">
-        <j:choose>
-            <j:set var="jdks" value="${descriptor.installableJDKs}"/>
-            <j:when test="${empty(jdks)}">
-                <!-- if JDK list is not available, fall back to text box -->
-                <f:textbox />
-            </j:when>
-            <j:otherwise>
-                <select name="_.id">
-                    <j:forEach var="family" items="${jdks}">
-                        <optgroup label="${family.name}">
-                            <j:forEach var="jdk" items="${family.releases}">
-                                <f:option value="${jdk.release_name}" selected="${jdk.matchesId(instance.id)}">${jdk.release_name}</f:option>
-                            </j:forEach>
-                        </optgroup>
-                    </j:forEach>
-                </select>
-            </j:otherwise>
-        </j:choose>
-    </f:entry>
-</j:jelly>
+<div>
+    <p>HotSpot is the VM from the OpenJDK community. It is the most widely used VM today and is used in Oracle’s JDK. It is suitable for all workloads.</p>
+
+    <p>For more details see <a href="https://openjdk.java.net/groups/hotspot/" target="_blank">OpenJDK HotSpot.</a></p>
+
+    <p>Eclipse OpenJ9 is the VM from the Eclipse community. It is an enterprise-grade VM designed for low memory usage and fast start-up and is used in IBM’s JDK. It is suitable for running all workloads.</p>
+
+    <p>For more details see <a href="https://www.eclipse.org/openj9/" target="_blank">Eclipse OpenJ9.</a></p>
+</div>
