--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/AdoptOpenJDKInstaller/help.html
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/AdoptOpenJDKInstaller/help.html
@@ -1,6 +1,6 @@
 <!--
   #%L
-  AdoptOpenJDK installer Plugin
+  Eclipse Temurin installer Plugin
   %%
   Copyright (C) 2016 - 2019 Mads Mohr Christensen
   %%
