--- a/src/main/webapp/version.html
+++ b/src/main/webapp/version.html
@@ -24,11 +24,7 @@
   #L%
   -->
 <div>
-    <p>HotSpot is the VM from the OpenJDK community. It is the most widely used VM today and is used in Oracle’s JDK. It is suitable for all workloads.</p>
+    <p>HotSpot is the Java virtual machine from the OpenJDK community. It is the most widely used VM today. It is suitable for all workloads.</p>
 
-    <p>For more details see <a href="https://openjdk.java.net/groups/hotspot/" target="_blank">OpenJDK HotSpot.</a></p>
-
-    <p>Eclipse OpenJ9 is the VM from the Eclipse community. It is an enterprise-grade VM designed for low memory usage and fast start-up and is used in IBM’s JDK. It is suitable for running all workloads.</p>
-
-    <p>For more details see <a href="https://www.eclipse.org/openj9/" target="_blank">Eclipse OpenJ9.</a></p>
+    <p>For more details see <a href="https://openjdk.org/groups/hotspot/">OpenJDK HotSpot.</a></p>
 </div>
